cambios agregamos sitio de twitch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>Hola este es mi sitio web
-        mi nombre es Juan ramirez
+        mi nombre es Juan ramirez y este es mi primer directorio
     </p>
 </body>
 </html>
